tests/ir/valid/basic.vit
space tests/ir/valid/basic

proc main() -> int {
  give 0;
}
