tests/ir/invalid/bad_call_arity.vit
space tests/ir/invalid/bad_call_arity

proc f(a: int) -> int { give a; }

proc main() -> int {
  give f();
}
